# AI_platform

./: .gitignore  METRICS_EXPLAINED.md  README.md  TEST_REPORT.md  models_requirements.txt
nexus/: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  seed_data.py
nexus/dashboard/: package-lock.json  package.json  tailwind.config.ts
nexus/dashboard/src/api/: client.ts
nexus/dashboard/src/app/: page.tsx
nexus/dashboard/src/app/audit-log/: page.tsx
nexus/dashboard/src/app/live-feed/: page.tsx
nexus/dashboard/src/app/login/: page.tsx
nexus/dashboard/src/app/model-perf/: page.tsx
nexus/dashboard/src/components/: Layout.tsx  MetricBadge.tsx  PolicyRule.tsx  QueryRow.tsx  ScoreCard.tsx
nexus/dashboard/src/hooks/: useQueryStream.ts  useThresholds.ts
nexus/dashboard/src/pages/: AuditLog.tsx  LiveFeed.tsx  Login.tsx  ModelPerf.tsx  PolicyEditor.tsx  Workspaces.tsx
nexus/dashboard/src/types/: index.ts
nexus/gateway/: __init__.py  auth.py  main.py  query_trace.py  rate_limiter.py  router.py  schemas.py  tenant_resolver.py
nexus/governance/: __init__.py  audit_logger.py  db.py  enforcement_gate.py  main.py  policy_engine.py  repository.py  rules_evaluator.py  schemas.py  tenant_service.py  threshold_manager.py  workspace_config.py
nexus/governance/migrations/: README.md  env.py
nexus/governance/migrations/versions/: 0001_initial.py
nexus/governance/models/: __init__.py  audit.py  policy.py  tenant.py
nexus/shared/: __init__.py  config.py  constants.py  events.py  exceptions.py  logger.py  query_id.py  score_card.py
(+142 files in other folders)
